fix(header): align responsive nav to look like header nav (#953)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [ ] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/angular/src/layout/nav/_header.clarity.scss
+++ b/projects/angular/src/layout/nav/_header.clarity.scss
@@ -374,6 +374,14 @@
     display: flex;
     flex: 0 0 auto;
 
+    @media screen and (min-width: map.get(variables.$clr-grid-breakpoints, lg)) {
+      a:first-of-type::before,
+      a:last-of-type::after {
+        @include header-section-divider();
+        left: auto;
+      }
+    }
+
     &:last-child {
       & > .nav-link:last-child::after {
         content: none;
@@ -384,12 +392,6 @@
       &:first-of-type,
       &:last-of-type {
         position: relative;
-      }
-
-      &:first-of-type::before,
-      &:last-of-type::after {
-        @include header-section-divider();
-        left: auto;
       }
 
       &:first-of-type::before {
